Modify pom.xml to update dependencies and add Lombok
Updated dependencies and added Lombok support.